<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_auth_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_auth_background"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_auth_title"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_recovery"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_field"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/padding_field"
        android:fontFamily="@font/nunito_sans_reguler"
        android:hint="@string/text_hint_password_field"
        android:inputType="textPassword"
        android:visibility="gone"
        android:padding="@dimen/padding_field"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_field"
        tools:ignore="Autofill" />
    <EditText
        android:id="@+id/et_email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginEnd="@dimen/margin_auth"
        android:padding="@dimen/padding_field"
        android:background="@drawable/bg_auth_field"
        android:drawablePadding="@dimen/padding_field"
        android:drawableStart="@drawable/ic_mail"
        android:fontFamily="@font/nunito_sans_reguler"
        android:hint="@string/text_hint_email_field"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_body_size"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_auth_bg"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tv_privacy_and_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nunito_sans_reguler"
        android:gravity="center"
        android:text="@string/text_forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_body_size"
        app:layout_constraintEnd_toEndOf="@+id/et_password_field"
        app:layout_constraintStart_toStartOf="@+id/et_password_field"
        app:layout_constraintTop_toBottomOf="@+id/et_password_field" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_auth"
        android:layout_marginTop="@dimen/margin_privacy_policy"
        android:layout_marginEnd="@dimen/margin_auth"
        android:background="@drawable/bg_auth_btn"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/text_send"
        android:textColor="@color/colorTextORIcon"
        android:textSize="@dimen/text_btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_privacy_and_policy" />

</android.support.constraint.ConstraintLayout>